# siren

./: .gitignore  README.md  README.pt.md  pyproject.toml  requirements.txt  teste.py
siren/: __init__.py  clean.py  core.py
