[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "siren-debug"
version = "0.2.0"
description = "Minimalist debug tool for Python with automatic cleaner"
readme = "README.md"
authors = [
    { name = "Alexandra Bona Abreu" }
]
license = { text = "MIT" }
requires-python = ">=3.6"

dependencies = []

[project.scripts]
siren-clean = "siren.clean:main"

[tool.setuptools.packages.find]
where = ["."]